force-app/main/default/objects/CalloutRequest__c/CalloutRequest__c.object-meta.xml
<CustomObject>
    <description>Callout requests made on behalf of the application</description>
    <label>Callout Request</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Callout Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>