force-app/main/default/objects/CalloutRequest__c/fields/AsyncRequest__c.field-meta.xml
<CustomField>
    <fullName>AsyncRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated async request, if any, for this callout request. Note that after processing the async request will be deleted, clearing this value.</description>
    <inlineHelpText>Associated async request, if any, for this callout request. Note that after processing the async request will be deleted, clearing this value.</inlineHelpText>
    <label>Async Request</label>
    <referenceTo>AsyncRequest__c</referenceTo>
    <relationshipLabel>Callout Requests</relationshipLabel>
    <relationshipName>CalloutRequests</relationshipName>
    <type>Lookup</type>
</CustomField>