force-app/main/default/objects/CalloutRequest__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Duration of the callout in seconds</description>
    <inlineHelpText>Duration of the callout in seconds</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>