force-app/main/default/objects/CalloutRequest__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>Endpoint URL of external server&apos;s API</description>
    <inlineHelpText>Endpoint URL of external server&apos;s API</inlineHelpText>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>