force-app/main/default/objects/CalloutRequest__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>HTTP Method to be used for the callout (GET, POST, etc.)</description>
    <inlineHelpText>HTTP Method to be used for the callout (GET, POST, etc.)</inlineHelpText>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>