force-app/main/default/objects/CalloutRequest__c/fields/Sent__c.field-meta.xml
<CustomField>
    <fullName>Sent__c</fullName>
    <description>Timestamp of when the callout was sent</description>
    <inlineHelpText>Timestamp of when the callout was sent</inlineHelpText>
    <label>Sent</label>
    <type>DateTime</type>
</CustomField>