force-app/main/default/objects/CalloutRequest__c/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <description>Timeout for the callout in seconds</description>
    <inlineHelpText>Timeout for the callout in seconds</inlineHelpText>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>